--- a/src/app/components/clients/home/home.component.html
+++ b/src/app/components/clients/home/home.component.html
@@ -184,7 +184,7 @@
                 </div>
             </div>
             <div class="ppopular-detail">
-                <a class="ppopular-detail-link" routerLink="">Xem tất cả
+                <a class="ppopular-detail-link" routerLink="/collection">Xem tất cả
                     <i class='bx bx-chevron-right'></i>
                 </a>
             </div>
