--- a/src/app/components/admin/menu-admin/menu-admin.component.html
+++ b/src/app/components/admin/menu-admin/menu-admin.component.html
@@ -18,7 +18,7 @@
                     </a>
                 </li>
                 <li class="menu-item menu-dropdown" [ngClass]="isShow ? 'show' : '' " (click)="toggleMenuDropdown()">
-                    <a routerLink="/admin/order" class="menu-link">
+                    <a href="javascript:void(0)" class="menu-link">
                         <i class='menu-icon bx bx-list-ul'></i>
                         <div class="text-truncate">Quản lý booking</div>
                     </a>
