--- a/src/app/components/clients/custom-select/custom-select.component.html
+++ b/src/app/components/clients/custom-select/custom-select.component.html
@@ -1,11 +1,11 @@
 <div class="custom-select">
     <div #selectButton class="select-button" (click)="toggleDropdown()">
-        <span>{{ selectedOption || textDefault }}</span>
+        <span>{{ selectedOptionText || textDefault }}</span>
         <i *ngIf="!isDropdownOpen" class='bx bx-collapse-vertical'></i>
         <i *ngIf="isDropdownOpen" class='bx bx-expand-vertical'></i>
     </div>
     <ul #selectOptions class="select-options" [ngClass]="{'active': isDropdownOpen}">
-        <li *ngFor="let option of options" (click)="selectOption(option.textContent)">
+        <li *ngFor="let option of options" (click)="selectOption(option.value)">
             {{ option.textContent }}
         </li>
     </ul>
