--- a/src/app/components/clients/send-contact/send-contact.component.html
+++ b/src/app/components/clients/send-contact/send-contact.component.html
@@ -39,6 +39,12 @@
                         placeholder="quang@gmail.com">
                     <span *ngIf="invalidEmail" class="validate-message">Vui lòng nhập email hợp lệ.</span>
                 </div>
+                <div class="form-group">
+                    <label for="address">Địa chỉ chụp ảnh</label>
+                    <input type="text" id="address" name="address" required (input)="onChangeAddress($event)"
+                        placeholder="">
+                    <span *ngIf="invalidAddress" class="validate-message">Vui lòng nhập địa chỉ hợp lệ.</span>
+                </div>
                 <button type="submit">Gửi</button>
             </form>
         </div>
