--- a/src/app/components/partners/partner-profile/partner-profile.component.scss
+++ b/src/app/components/partners/partner-profile/partner-profile.component.scss
@@ -103,12 +103,36 @@
                 }
 
                 .des-forMe-wrapper {
+                    width: 100%;
+                    position: relative;
 
                     .des-forMe-name {
-                        margin: 2px 0;
-                        color: var(--color-primary);
-                        font-weight: bold;
-                        font-size: 28px;
+                        width: 100%;
+                        position: relative;
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: center;
+                        column-gap: 2rem;
+
+                        h2 {
+                            // width: 100%;
+                            margin: 2px 0;
+                            color: var(--color-primary);
+                            font-weight: bold;
+                            font-size: 28px;
+                        }
+
+                        .btn-edit-forMe {
+                            cursor: pointer;
+                            width: 28px;
+                            height: 28px;
+                            font-size: 28px;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                        }
+
+
                     }
 
                     .des-forMe-address {
@@ -140,6 +164,57 @@
                     .des-forMe-exp {
                         margin: 4px 0;
 
+                    }
+
+                    .forMe-edit {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-color: rgb(232, 232, 232);
+                        border-radius: .3rem;
+                        overflow-y: auto;
+                        padding: 1rem 2rem;
+                        display: none;
+
+                        input {
+                            margin-top: 1em;
+                            width: 100%;
+                            height: 40px;
+                            border: none;
+                            outline: none;
+                            border-radius: .3rem;
+                            background-color: rgb(221, 221, 221);
+                            padding: 5px 10px;
+                        }
+
+                        .btn-edit-control {
+                            position: sticky;
+                            right: 0;
+                            bottom: 0rem;
+                            display: flex;
+                            justify-content: flex-end;
+                            column-gap: .5rem;
+
+                            a {
+                                line-height: 35px;
+                                color: var(--color-light);
+                                padding: 0 15px;
+                                background-color: var(--color-primary);
+                                text-decoration: none;
+                                border-radius: .3rem;
+                            }
+
+                            .btn-cancel {
+                                background-color: rgb(184, 184, 184);
+                                color: black;
+                            }
+                        }
+                    }
+
+                    .forMe-edit.show {
+                        display: block;
                     }
                 }
 
@@ -186,6 +261,7 @@
             .infor-content-list {
                 padding-top: 1.5rem;
                 padding-left: 2rem;
+                position: relative;
 
                 .ic-item {
                     .text-description {
@@ -211,6 +287,65 @@
 
                         p {}
                     }
+
+                    .btn-ic-edit {
+                        cursor: pointer;
+                        width: 100%;
+                        display: flex;
+                        justify-content: center;
+                        font-size: 28px;
+                    }
+
+                    .ic-edit {
+                        display: none;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-color: rgb(232, 232, 232);
+                        border-radius: .5rem;
+                        padding: 1.5rem 2rem;
+
+                        textarea {
+                            margin-top: 1em;
+                            width: 100%;
+                            height: 80px;
+                            border: none;
+                            outline: none;
+                            border-radius: .3rem;
+                            background-color: rgb(221, 221, 221);
+                            padding: 5px 10px;
+                        }
+
+                        .btn-edit-control {
+                            position: sticky;
+                            right: 0;
+                            bottom: 0;
+                            display: flex;
+                            justify-content: flex-end;
+                            column-gap: .5rem;
+
+                            a {
+                                line-height: 35px;
+                                color: var(--color-light);
+                                padding: 0 15px;
+                                background-color: var(--color-primary);
+                                text-decoration: none;
+                                border-radius: .3rem;
+                            }
+
+                            .btn-cancel {
+                                background-color: rgb(184, 184, 184);
+                                color: black;
+                            }
+
+                        }
+                    }
+
+                    .ic-edit.show {
+                        display: block;
+                    }
                 }
 
             }
@@ -219,6 +354,7 @@
 
                 padding-left: 2rem;
                 padding-top: .5rem;
+                position: relative;
 
                 .feature-title {
                     color: var(--color-primary);
@@ -227,6 +363,8 @@
                 }
 
                 .feature-content {
+                    position: relative;
+
                     .language {
                         .language-title {
                             display: flex;
@@ -277,6 +415,67 @@
                             font-size: 18px;
                         }
                     }
+
+                    .btn-feature-edit {
+                        cursor: pointer;
+                        width: 100%;
+                        display: flex;
+                        justify-content: center;
+                        font-size: 28px;
+                    }
+
+                }
+
+                .feature-edit {
+                    display: none;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-color: rgb(232, 232, 232);
+                    border-radius: .5rem;
+                    padding: .5rem 2rem;
+                    overflow-y: auto;
+
+                    textarea {
+                        margin-top: 1em;
+                        width: 100%;
+                        height: 80px;
+                        border: none;
+                        outline: none;
+                        border-radius: .3rem;
+                        background-color: rgb(221, 221, 221);
+                        padding: 5px 10px;
+                    }
+
+                    .btn-edit-control {
+                        position: sticky;
+                        right: 0;
+                        bottom: 1rem;
+                        display: flex;
+                        justify-content: flex-end;
+                        column-gap: .5rem;
+
+                        a {
+                            line-height: 35px;
+                            color: var(--color-light);
+                            padding: 0 15px;
+                            background-color: var(--color-primary);
+                            text-decoration: none;
+                            border-radius: .3rem;
+                        }
+
+                        .btn-cancel {
+                            background-color: rgb(184, 184, 184);
+                            color: black;
+                        }
+
+                    }
+                }
+
+                .feature-edit.show {
+                    display: block;
                 }
             }
 
@@ -313,12 +512,27 @@
                     }
 
                     .it-footer {
+                        position: relative;
+
                         .it-cate {
                             font-size: 20px;
                             margin-bottom: 10px;
                         }
 
                         .it-count-picture {}
+
+                        .btn-portfolio-edit {
+                            cursor: pointer;
+                            width: 100%;
+                            display: flex;
+                            justify-content: flex-end;
+                            font-size: 28px;
+                            position: absolute;
+                            right: 1.5rem;
+                            top: 50%;
+                            transform: translateY(-50%);
+                            z-index: 1;
+                        }
                     }
                 }
             }
@@ -637,6 +851,14 @@
     .profile-content {
         .content-wrapper {
             padding: 2.5rem 2rem 0 !important;
+        }
+
+        .ic-edit {
+            padding-right: 0 !important;
+        }
+
+        .feature-edit {
+            padding-right: 0 !important;
         }
     }
 }
