--- a/src/app/components/admin/order-accept-admin/order-accept-admin.component.html
+++ b/src/app/components/admin/order-accept-admin/order-accept-admin.component.html
@@ -23,6 +23,7 @@
                                 <th class="row-header">Người chụp</th>
                                 <th class="row-header">Trạng thái</th>
                                 <th class="row-header">Tổng tiền</th>
+                                <th class="row-header">Mã</th>
                                 <th class="row-header .col-fixed">Chức năng</th>
                             </tr>
                         </thead>
@@ -38,6 +39,7 @@
                                 <td class="row-content">{{o.order.shooting_type}}</td>
                                 <td class="row-content">{{o.user.full_name}}</td>
                                 <td class="row-content">{{o.order.price}}</td>
+                                <td class="row-content">{{o.order.code}}</td>
                                 <td class="row-content">{{o.order.status==='cho_duyet'?'Chờ duyệt':''}}</td>
                                 <td class="row-content .col-fixed">
                                     <a href="javascript:void(0)" class="btn btn-accept"
