--- a/src/app/components/admin/order-list-admin/order-list-admin.component.html
+++ b/src/app/components/admin/order-list-admin/order-list-admin.component.html
@@ -22,6 +22,7 @@
                                 <th class="row-header">Loại chụp</th>
                                 <th class="row-header">Người chụp</th>
                                 <th class="row-header">Tổng tiền</th>
+                                <th class="row-header">Mã</th>
                                 <th class="row-header">Trạng thái</th>
                             </tr>
                         </thead>
@@ -37,6 +38,7 @@
                                 <td class="row-content">{{o.order.shooting_type}}</td>
                                 <td class="row-content">{{o.user.full_name}}</td>
                                 <td class="row-content">{{o.order.price}}</td>
+                                <td class="row-content">{{o.order.code}}</td>
                                 <td class="row-content">{{o.order.status==='cho_duyet'?'Chờ duyệt':
                                     o.order.status==='da_duyet' ? 'Đã duyệt' : o.order.status==='huy' ? 'Hủy' : ''}}
                                 </td>
