--- a/src/app/components/clients/home/home.component.html
+++ b/src/app/components/clients/home/home.component.html
@@ -329,4 +329,23 @@
             </div>
         </div>
     </div>
+
+    <!-- home.component.html -->
+    <table class="table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let user of users">
+                <td>{{ user.id }}</td>
+                <td>{{ user.full_name }}</td>
+                <td>{{ user.email }}</td>
+            </tr>
+        </tbody>
+    </table>
+
 </div>
