--- a/src/app/components/clients/page-picture-refund/page-picture-refund.component.html
+++ b/src/app/components/clients/page-picture-refund/page-picture-refund.component.html
@@ -126,15 +126,15 @@
                 </div>
                 <div class="repair-content">
                     <div class="enter-code-picture">
-                        <p class="ecp-title">Nhập mã ảnh</p>
-                        <div class="ecp-content">
-                            <textarea name="" id="ecp-code" cols="30" rows="10"></textarea>
+                        <div class="ecp-title">Nhập mã ảnh</div>
+                        <div class="po-title">
+                            Chính sách yêu cầu sửa ảnh
                         </div>
                     </div>
                     <div class="repair-police">
-                        <p class="po-title">
-                            Chính sách yêu cầu sửa ảnh
-                        </p>
+                        <div class="ecp-content">
+                            <textarea name="" id="ecp-code" cols="30" rows="10"></textarea>
+                        </div>
                         <div class="po-content-wr">
                             <div class="po-content">
                                 <li>Khách hàng điền mã ảnh đối với những bức ảnh mà mình muốn chỉnh sửa</li>
