--- a/src/app/components/partners/partner-profile/partner-profile.component.html
+++ b/src/app/components/partners/partner-profile/partner-profile.component.html
@@ -208,8 +208,8 @@
                         </div>
                     </div>
                     <div class="btn-edit-control">
-                        <a href="javascript:void(0)" class="btn-save">Lưu</a>
-                        <a href="javascript:void(0)" class="btn-cancel">Hủy</a>
+                        <a href="javascript:void(0)" class="btn-save" (click)="saveFe()">Lưu</a>
+                        <a href="javascript:void(0)" class="btn-cancel" (click)="hideFeEdit()">Hủy</a>
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                 <h3 class="portfolio-title">My Portfolio</h3>
                 <div class="portfolio-content">
                     <div class="portfolio-item">
-                        <a routerLink="/collection">
+                        <a href="javascript:void(0);">
                             <div class="it-header">
                                 <img src="./assets/images/profile/op1.jpg" alt="">
                             </div>
@@ -234,7 +234,7 @@
                         </a>
                     </div>
                     <div class="portfolio-item">
-                        <a routerLink="/collection">
+                        <a href="javascript:void(0);">
                             <div class="it-header">
                                 <img src="./assets/images/profile/op2.jpg" alt="">
                             </div>
@@ -248,7 +248,7 @@
                         </a>
                     </div>
                     <div class="portfolio-item">
-                        <a routerLink="/collection">
+                        <a href="javascript:void(0);">
                             <div class="it-header">
                                 <img src="./assets/images/profile/op3.jpg" alt="">
                             </div>
@@ -262,7 +262,7 @@
                         </a>
                     </div>
                     <div class="portfolio-item">
-                        <a routerLink="/collection">
+                        <a href="javascript:void(0);">
                             <div class="it-header">
                                 <img src="./assets/images/profile/op4.jpg" alt="">
                             </div>
