--- a/src/app/components/clients/page-picture-refund/page-picture-refund.component.scss
+++ b/src/app/components/clients/page-picture-refund/page-picture-refund.component.scss
@@ -83,6 +83,7 @@
 
                     img {
                         width: 100%;
+                        height: 100%;
                         object-fit: cover;
                     }
                 }
@@ -261,6 +262,8 @@
             .ask-repair-content {
                 height: 80%;
                 width: 80%;
+                min-height: 400px;
+                overflow-y: auto;
                 margin: auto;
                 background-color: var(--color-light);
                 position: absolute;
@@ -291,16 +294,30 @@
                 .repair-content {
                     // height: 300px;
                     padding: 2rem 3rem;
-                    display: grid;
-                    grid-template-columns: repeat(4, 1fr);
-                    column-gap: 1rem;
 
                     .enter-code-picture {
-                        grid-column: span 2;
+                        display: grid;
+                        column-gap: 1rem;
+                        grid-template-columns: repeat(2, 1fr);
+                        margin-bottom: 1.5rem;
 
-                        .ecp-title {}
+                        .ecp-title {
+                            grid-column: span 1;
+                        }
+
+                        .po-title {
+                            grid-column: span 1;
+                        }
+
+                    }
+
+                    .repair-police {
+                        display: grid;
+                        column-gap: 1rem;
+                        grid-template-columns: repeat(2, 1fr);
 
                         .ecp-content {
+                            grid-column: span 1;
                             width: 100%;
                             height: 100%;
 
@@ -309,16 +326,12 @@
                                 width: 100%;
                                 outline: none;
                                 border: 2px solid var(--color-secondary);
+                                padding: .5rem;
                             }
                         }
-                    }
-
-                    .repair-police {
-                        grid-column: span 2;
-
-                        .po-title {}
 
                         .po-content-wr {
+                            grid-column: span 1;
                             padding: 1rem;
                             display: flex;
                             justify-content: center;
@@ -334,7 +347,7 @@
 
                 .repair-submit {
                     padding: 0 3rem;
-                    margin-top: 3rem;
+                    margin-bottom: 3rem;
                     display: flex;
                     justify-content: space-between;
 
@@ -406,5 +419,9 @@
 }
 
 @media(max-width:991.98px) {
-    .page-pr-wrapper {}
+    .page-pr-wrapper {
+        .picture-content {
+            grid-template-columns: repeat(2, 1fr) !important;
+        }
+    }
 }
