--- a/src/app/components/clients/page-picture-refund/page-picture-refund.component.html
+++ b/src/app/components/clients/page-picture-refund/page-picture-refund.component.html
@@ -124,31 +124,34 @@
                 <div class="repair-header">
                     <h2><i class='bx bx-chevron-left'></i>Yêu cầu sửa ảnh</h2>
                 </div>
-                <div class="repair-content">
-                    <div class="enter-code-picture">
-                        <div class="ecp-title">Nhập mã ảnh</div>
-                        <div class="po-title">
-                            Chính sách yêu cầu sửa ảnh
+                <div class="repair-cont">
+                    <div class="repair-content">
+                        <div class="enter-code-picture">
+                            <div class="ecp-title">Nhập mã ảnh</div>
+                            <div class="po-title">
+                                Chính sách yêu cầu sửa ảnh
+                            </div>
                         </div>
-                    </div>
-                    <div class="repair-police">
-                        <div class="ecp-content">
-                            <textarea name="" id="ecp-code" cols="30" rows="10"></textarea>
-                        </div>
-                        <div class="po-content-wr">
-                            <div class="po-content">
-                                <li>Khách hàng điền mã ảnh đối với những bức ảnh mà mình muốn chỉnh sửa</li>
-                                <li>Số lượng bức ảnh được sửa phụ thuộc vào gói chụp ảnh đã thỏa thuận với nhiếp ảnh gia
-                                    trước đó</li>
-                                <li>Truy cập lại file nhận ảnh để những bức ảnh đã được chỉnh sửa sau 2-3 ngày</li>
+                        <div class="repair-police">
+                            <div class="ecp-content">
+                                <textarea name="" id="ecp-code" cols="30" rows="10"></textarea>
+                            </div>
+                            <div class="po-content-wr">
+                                <div class="po-content">
+                                    <li>Khách hàng điền mã ảnh đối với những bức ảnh mà mình muốn chỉnh sửa</li>
+                                    <li>Số lượng bức ảnh được sửa phụ thuộc vào gói chụp ảnh đã thỏa thuận với nhiếp ảnh
+                                        gia
+                                        trước đó</li>
+                                    <li>Truy cập lại file nhận ảnh để những bức ảnh đã được chỉnh sửa sau 2-3 ngày</li>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="repair-submit">
-                    <div class="rs-left"></div>
-                    <div class="rs-right">
-                        <a href="javascript:void(0)" class="btn-submit-repair">Gửi yêu cầu</a>
+                    <div class="repair-submit">
+                        <div class="rs-left"></div>
+                        <div class="rs-right">
+                            <a href="javascript:void(0)" class="btn-submit-repair">Gửi yêu cầu</a>
+                        </div>
                     </div>
                 </div>
                 <a href="javascript:void(0)" (click)="closeAsk()" class="btn-close-ask">
